# my-fastest-drogon-app-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Jenkinsfile  README.md  conanfile.py  config.docker.json  config.json  dependencies.sh  docker-compose.prod.yml  docker-compose.yml  init.sql  main.cc  setup.md
controllers/: api_v1_User.cc  api_v1_User.h
docs/: 01-overview.md  02-setup.md  03-backend.md  04-api.md  05-auth.md  06-database.md  07-docker.md  08-frontend.md  09-troubleshooting.md  README.md
filters/: auth.cc
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/auth/login-signup/: page.tsx
frontend/components/: AddTodoForm.tsx  Header.tsx  LoginPage.tsx  ProgressCard.tsx  SignUpPage.tsx  TodoApp.tsx  TodoFilters.tsx  TodoItem.tsx  TodoList.tsx
frontend/components/ui/: Button.tsx  Input.tsx  LoadingSpinner.tsx  Textarea.tsx
frontend/lib/: api.ts
frontend/types/: todo.ts
k8s/: argocd.md  argocd_installation.sh  deployment.yaml  ingress.yaml  jenkins_installation.sh  namespace.yaml
k8s/app/: deployment.yaml  secret.yaml  svc.yaml
k8s/db/: deployment.yaml  pv.yaml  pvc.yaml  secrets.yaml  svc.yaml
middlewares/: ErrorHandler.cc  ErrorHandler.h
models/: model.json
scripts/: dev-entrypoint.sh
src/: main.cc
src/controllers/: api_v1_User.cc  api_v1_User.h  api_v1_health.cc  api_v1_health.h  api_v1_todos.cc  api_v1_todos.h  assistant.cc  assistant.h  health.cc  health.h
src/filters/: CorsMiddleware.cc  CorsMiddleware.h  auth.cc  auth.h
src/functions/: todoFunctions.cc  todoFunctions.h
src/gemini/: gemini.cc  gemini.h
src/models/: Todos.cc  Todos.h  Users.cc  Users.h  model.json
src/utils/: AppError.cc  token.cc  token.h
utils/: AppError.h  Response.h  token.cc  token.h
